# agent-context-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codex-context.ps1  dataciviclab.config.yml  pyproject.toml  session_bootstrap.md  topic_index.json  workspace_triage.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: audit_test_markers.py
.github/workflows/: build-context.yml  test-audit.yml
examples/: config.template.yml  dataciviclab.config.yml
examples/output/: session_bootstrap.md  topic_index.json  workspace_triage.json
schemas/: repo-signals.md  topic_index-v2.md  workspace_triage.md
src/agent_context_builder/: __init__.py  cli.py  config.py  discussions.py  git_local.py  github.py  mcp_server.py  render.py  signals.py  telemetry.py  triage.py
src/agent_context_builder/sources/: dcl.py  de.py  di.py  so.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dcl.py  test_discussions.py  test_github.py  test_mcp_server.py  test_render.py  test_signals.py
workflows/: lab-check.md
