[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-context-builder"
version = "0.1.0"
description = "Autonomous context generation for agents: compact bootstrap, workspace triage, topic index"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "DataCivicLab", email = "dev@dataciviclab.org"}
]
keywords = ["agent", "context", "github", "triage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "lab-connectors @ git+https://github.com/dataciviclab/lab-connectors.git@v0.12.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "mcp>=1.0",
]

[project.scripts]
agent-context = "agent_context_builder.cli:main"
agent-context-mcp = "agent_context_builder.mcp_server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_context_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/agent_context_builder --timeout=30"
markers = [
    "contract: public interface, artifact format, API contract, CLI stable output",
    "policy: Lab non-obvious rule or cross-component behavior",
    "regression: documented bug fix (link to issue/PR)",
    "adapter: adapter to external service (our wrappers, not library internals)",
    "pure_unit: non-trivial pure logic, zero side effects",
    "smoke: end-to-end golden path only",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
no_implicit_optional = true
ignore_missing_imports = true
disallow_untyped_defs = false
